# lbparticles

./: .gitignore  LICENSE  LICENSE.txt  README.md  environment.yml  lbparticles.py  pyproject.toml  readme.md  readthedocs.yaml  requirements.txt
.github/workflows/: main_pulls.yml
benchmark/: benchmark.py
docs/: .gitignore  Makefile  conf.py  index.md
docs/examples/: benchmark.ipynb  quickstart.ipynb
docs/pages/: api.rst  implement_a_potential.ipynb  install.rst  quickstart.ipynb  quickstart.rst
examples/: quickstart.ipynb
paper/: paper.bib  paper.md
src/LBPARTICLES_LBPARTICLES/: lbparticles.py
src/LBParticles/: LBParticles.py  __init__.py  lbparticles.py
src/lbparticles/: __init__.py  lbparticles.py  particle.py  potentials.py  precomputer.py  util.py
tests/: test_logpotential.py  test_potentials.py  test_precomputer.py  test_vectors.py  vector_test.py
