[project]
name = "LBParticles"
version = "0.0.1"
authors = [
    { name = "John Forbes", email = "john.forbes@canterbury.ac.nz" },
    { name = "Jack Patterson", email = "jack.patterson@canterbury.ac.nz" },
    { name = "Angus Forrest", email = "angus.forrest@canterbury.ac.nz" },
]
description = "Lynden Bell Particles"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "corner>=2.2.2",
    "matplotlib>=3.8.1",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "scipy>=1.11.3",
    "tqdm>=4.66.1"
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx>=7.2.6", "pandoc", "myst-nb", "sphinx-book-theme", "ipython"]

[project.urls]
"Homepage" = "https://lbparticles.readthedocs.io"
"Source" = "https://github.com/LBParticles/LBParticles"
"Issues" = "https://github.com/LBParticles/LBParticles/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"