[project]
name = "lbparticles"
version = "0.0.3"
authors = [
    { name = "John Forbes", email = "john.forbes@canterbury.ac.nz" },
    { name = "Jack Patterson", email = "jack.patterson@canterbury.ac.nz" },
    { name = "Angus Forrest", email = "angus.forrest@canterbury.ac.nz" },
]
description = "Python Package to construct test particle orbits in galaxy. Created for the purpose of investigating interstellar objects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.11.3"
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx>=7.2.6", "pandoc", "myst-nb", "sphinx-book-theme", "ipython"]

[project.urls]
"Homepage" = "https://lbparticles.readthedocs.io"
"Source" = "https://github.com/LBParticles/LBParticles"
"Issues" = "https://github.com/LBParticles/LBParticles/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/docs",
    "/tests"
]