[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lbparticles"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "John Forbes", email = "john.forbes@canterbury.ac.nz" },
    { name = "Jack Patterson", email = "jack.patterson@canterbury.ac.nz" },
    { name = "Angus Forrest", email = "angus.forrest@canterbury.ac.nz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.11.3"
]

[project.urls]
Documentation = "https://github.com/unknown/lbparticles#readme"
Issues = "https://github.com/unknown/lbparticles/issues"
Source = "https://github.com/unknown/lbparticles"

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx>=7.2.6", "pandoc", "myst-nb", "sphinx-book-theme", "ipython"]

[tool.hatch.version]
path = "src/lbparticles/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lbparticles tests}"

[tool.coverage.run]
source_pkgs = ["lbparticles", "tests"]
branch = true
parallel = true
omit = [
  "src/lbparticles/__about__.py",
]

[tool.coverage.paths]
lbparticles = ["src/lbparticles", "*/lbparticles/src/lbparticles"]
tests = ["tests", "*/lbparticles/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
